[gd_scene load_steps=6 format=3 uid="uid://bfap68057u8ma"]

[ext_resource type="Script" path="res://scripts/scr_scenes/menu/options_menu.gd" id="1_0p1fq"]
[ext_resource type="AudioStream" uid="uid://wv8s0n317oy1" path="res://visuals/sound/Butyrka_-_Zolotye_kupola_54828420.mp3" id="2_ddt7k"]
[ext_resource type="VideoStream" path="res://visuals/video/menu_space.ogv" id="2_uyerr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxtbb"]
bg_color = Color(0, 0, 0, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rj8iy"]
bg_color = Color(0, 0, 0, 0.756863)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0p1fq")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_uyerr")
autoplay = true
expand = true
loop = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jxtbb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -249.0
offset_top = 200.0
offset_right = -8.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 4

[node name="Panel2" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rj8iy")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Mute
Background Music  "

[node name="BackButt" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="MarginContainerVolume" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -352.0
offset_right = 300.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4

[node name="screen" type="MarginContainer" parent="MarginContainerVolume"]
layout_mode = 2
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="MarginContainerVolume/screen"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rj8iy")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainerVolume/screen"]
layout_mode = 2
size_flags_vertical = 0

[node name="FullScreen" type="CheckButton" parent="MarginContainerVolume/screen/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "FullScreen"

[node name="BorderLess" type="CheckButton" parent="MarginContainerVolume/screen/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "BorderLess
"

[node name="VSync" type="CheckButton" parent="MarginContainerVolume/screen/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "VSync"

[node name="music" type="MarginContainer" parent="MarginContainerVolume"]
layout_mode = 2
size_flags_vertical = 8

[node name="Panel" type="Panel" parent="MarginContainerVolume/music"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rj8iy")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerVolume/music"]
layout_mode = 2
size_flags_vertical = 8

[node name="master" type="HSlider" parent="MarginContainerVolume/music/VBoxContainer"]
layout_mode = 2

[node name="LabelMasterText" type="Label" parent="MarginContainerVolume/music/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Master
"

[node name="music" type="HSlider" parent="MarginContainerVolume/music/VBoxContainer"]
layout_mode = 2

[node name="LabelMusText" type="Label" parent="MarginContainerVolume/music/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="sound_FX" type="HSlider" parent="MarginContainerVolume/music/VBoxContainer"]
layout_mode = 2

[node name="LabelTextSX" type="Label" parent="MarginContainerVolume/music/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Sound FX"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ddt7k")

[node name="GameOptionsName" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 64.0
offset_right = 152.0
offset_bottom = 128.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="GameOptionsName"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rj8iy")

[node name="Label" type="Label" parent="GameOptionsName"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Ocean With Stars
options"
horizontal_alignment = 1

[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButt" to="." method="_on_back_butt_pressed"]
[connection signal="toggled" from="MarginContainerVolume/screen/VBoxContainer2/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="MarginContainerVolume/screen/VBoxContainer2/BorderLess" to="." method="_on_border_less_toggled"]
[connection signal="toggled" from="MarginContainerVolume/screen/VBoxContainer2/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="value_changed" from="MarginContainerVolume/music/VBoxContainer/master" to="." method="_on_volume_butt_value_changed"]
[connection signal="value_changed" from="MarginContainerVolume/music/VBoxContainer/music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainerVolume/music/VBoxContainer/sound_FX" to="." method="_on_sound_fx_value_changed"]
